<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * received_tag_view.xml - The layout XML file of the received tag view  
 *
 *  Copyright 2011 World Three Technologies, Inc. 
 *  All Rights Reserved.
 * 
 *  This program is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
 *  Written by Yichao Yu <yichao@Masxaro>
 *
 */
 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tag_received_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	>
	    <!-- Store Name -->
	    <TextView android:id="@+id/tag_store_name_txt"
            android:text="Starbucks"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:gravity="center"
            android:textSize="20sp"
        />
	    
	    <!-- Receipt Time -->
	    <TextView android:id="@+id/tag_time_txt"
            android:text="2011-06-21 15:43:12"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:paddingTop="3sp"
            android:gravity="center"
            android:textSize="15sp"
        />
	    
		<!-- Receipt ID -->
		<TextView android:text="@string/receipt_info_id_lab"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="left"
		/>
		<TextView android:text="102"
			android:id="@+id/tag_id_txt"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="left"
		/>
				
		<TableLayout android:id="@+id/tag_items_table" 
		    android:layout_width="fill_parent" android:layout_height="wrap_content"
		    android:stretchColumns="0"
		>
		    <TableRow>
			    <TextView android:text="@string/receipt_info_item_id_lab"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:textSize="17sp"
	            />
	            <TextView android:text="@string/receipt_info_item_qty_lab"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:textSize="17sp"
	            />
	            <TextView android:text="@string/receipt_info_item_price_lab"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:textSize="17sp"
	            />
		    </TableRow>
		    
		    <!-- First item in the receipt -->
		    <TableRow>
		        <TextView android:text="1010"
		            android:layout_width="fill_parent" android:layout_height="match_parent"
		        />
		        <TextView android:text="1"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="10sp"
                />
                <TextView android:text="9.10"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingRight="10sp"
                />
		    
		    </TableRow>
		    <TableRow>
                <TextView android:text="Beef burger" 
                   android:layout_width="fill_parent" android:layout_height="match_parent"
                   android:paddingLeft="10sp"
                />
            </TableRow>
		    	    
		    <!-- Tax -->
		    <TableRow android:paddingTop="20sp">
		        <TextView android:layout_width="fill_parent" android:layout_height="match_parent"/>
		        <TextView android:text="@string/receipt_info_tax_lab"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_gravity="right"
	                android:paddingRight="10sp"
	            />
	            <TextView android:text="10%"
	                android:id="@+id/tag_tax_txt"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_gravity="right"
	                android:paddingRight="10sp"
	            />
		    </TableRow>
		    <!-- Total cost -->
		    <TableRow>
                <TextView android:layout_width="fill_parent" android:layout_height="match_parent"/>
                <TextView android:text="@string/receipt_info_total_lab"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_gravity="right"
	                android:paddingRight="10sp"
	            />
	            <TextView android:text="15.00USD"
	                android:id="@+id/tag_total_cost_txt"
	                android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_gravity="right"
	                android:paddingRight="10sp"
	            />
            </TableRow> 
        </TableLayout>
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:gravity="bottom"
	>
		<Button android:id="@+id/receipt_confirm_btn"
			android:text="@string/receipt_confirm_btn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1.0"
		/>
		
		<Button android:id="@+id/receipt_reject_btn"
			android:text="@string/receipt_reject_btn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1.0"
		/>
	
	</LinearLayout>
</LinearLayout>
