<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * login_dialog.xml - The layout XML file of the login_dialog  
 *
 *  Copyright 2011 World Three Technologies, Inc. 
 *  All Rights Reserved.
 * 
 *  This program is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
 *  Written by Yichao Yu <yichao@Masxaro>
 *
 */
 -->

<RelativeLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/login_dialog"
  	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical"  	
>
	<TableLayout 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
  		android:shrinkColumns="0"
  		android:stretchColumns="1"
	>
		<TableRow>
			<TextView android:text="@string/login_username_lab"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
			/>
			<EditText android:id="@+id/login_username"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:inputType="text"
				android:singleLine="true"
			/>
		    <TextView android:text="@string/masxaro_email"
			    android:layout_height="wrap_content" android:layout_width="fill_parent"
			    android:gravity="right"
			/>
		</TableRow>
	
		<TableRow android:visibility="invisible">
            <TextView android:text="@string/login_password_lab"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
            />
            <EditText android:layout_height="wrap_content"/>
        </TableRow>
	
	</TableLayout>
	
	<TableLayout android:id="@+id/pwd_set"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:stretchColumns="1"
    >
        <TableRow android:visibility="invisible">
            <TextView android:text="@string/login_username_lab"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
            />
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent"/>
        </TableRow>
    
        <TableRow>
            <TextView android:text="@string/login_password_lab"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
            />
            <EditText android:id="@+id/login_password"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
            />
        </TableRow>
    
    </TableLayout>
  
  	<LinearLayout android:layout_below="@id/pwd_set"
  		android:layout_width="fill_parent" android:layout_height="wrap_content"
  		android:orientation="horizontal"
  	>
		<Button android:text="@string/login_submit_btn"
			android:id="@+id/submit_btn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1.0"
		/>
		
		<Button android:text="@string/login_cancel_btn"
			android:id="@+id/cancel_btn"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1.0"
		/>
	
	</LinearLayout>

</RelativeLayout>
